# MultiCameraPeopleTrackingSystem1-0-FPGA

./: README.md  list.txt  test_webcam_loop.sh
client/: .gitignore  CMakeLists.txt  configurtion.xml
client/src/: BGSDetector.cpp  BGSDetector.h  CaptureHandler.cpp  CaptureHandler.h  Detector.cpp  Detector.h  Frame.h  HOGDetector.cpp  HOGDetector.h  Histogram.cpp  Histogram.h  NodeClient.cpp  NodeClient.h  main.cpp  xbacksub.c  xbacksub.h  xbacksub_hw.h
client/src/headers/: xbacksub.h  xbacksub_hw.h  xparameters.h
server/: .gitignore  CMakeLists.txt  configurtion.xml
server/configuration/: camera-c0-config.xml  camera-c1-config.xml  configurtion.xml
server/src/: CameraConfig.cpp  CameraConfig.h  DataAssociation.cpp  DataAssociation.h  Frame.h  FrameQueue.cpp  FrameQueue.h  ParticleFilterTracker.cpp  ParticleFilterTracker.h  Server.cpp  Server.h  connection.hpp  graph.cpp  graph.h  main.cpp
